# tracer

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: cli.py  config.py  conftest.py  pytest.ini  requirements.txt
backend/api/: app.py  groups.py
backend/ingestion/: cloudwatch.py  fixtures.py  source.py
backend/ranking/: baseline.py  rank.py  score.py
backend/sessions/: db.py  models.py
backend/signatures/: embed.py  normalize.py  store.py
backend/tests/: test_ingestion.py  test_ranking.py  test_signatures.py  test_verdicts.py
backend/verdicts/: generate.py  orchestrate.py
emitter/: handler.py
emitter/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
eval/: run_eval.py
eval/cases/: 01_npe_spike.json  02_pool_exhaustion.json  03_quiet_timeout.json
fixtures/: generate_fixture.py  sample_logs.json
src/tracer/: baseline.py  candidates.py  cli.py  fake_aws.py  ingest.py  signatures.py  storage.py
tests/: test_pipeline.py  test_signatures.py
