[project]
name = "tracer"
version = "0.1.0"
description = "Interactive CloudWatch debugging tool with learned baselines"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tracer = "tracer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
